# imc

./: .gitignore  configure  meson.build  meson.options
include/: arg_parse.h  imagelib.h  langvm.h  parse_stream.h  xpm.h
libimc/: meson.build
libimc/include/imc/: lexer.h
libimc/src/: lexer.c
scripts/: configure.fig  fig.sh
src/: arg_parse.c  imagelib.c  langvm.c  main.c  parse_stream.c  xpm.c
subprojects/: luajit.wrap  plutovg.wrap  stb.wrap  stc.wrap
subprojects/packagefiles/luajit/: meson_options.txt
subprojects/packagefiles/luajit/src/: meson.build
subprojects/packagefiles/stb/: meson.build
